@@ -18,25 +18,11 @@
 
 package org.apache.oodt.profile.handlers.lightweight;
 
-import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Properties;
-import java.util.Set;
-import java.util.Stack;
-import org.apache.oodt.commons.Configuration;
-import org.apache.oodt.commons.ExecServerConfig;
+import org.apache.oodt.commons.util.DOMParser;
+import org.apache.oodt.commons.util.XML;
 import org.apache.oodt.profile.Profile;
 import org.apache.oodt.profile.ProfileException;
 import org.apache.oodt.profile.handlers.ProfileHandler;
-import org.apache.oodt.commons.util.DOMParser;
-import org.apache.oodt.commons.util.XML;
 import org.apache.oodt.xmlquery.QueryElement;
 import org.apache.oodt.xmlquery.XMLQuery;
 import org.w3c.dom.Document;
@@ -45,6 +31,12 @@ import org.xml.sax.ErrorHandler;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 import org.xml.sax.SAXParseException;
+
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.*;
 
 /**
  * A lightweight profile server.
@@ -60,9 +52,8 @@ final public class LightweightProfileServer implements ProfileHandler {
 	 *
 	 * @throws IOException If an I/O error occurs.
 	 * @throws SAXException If an error occurs parsing the profile file.
-	 * @throws MalformedURLException If the default profile URL is malformed.
 	 */
-	public LightweightProfileServer() throws IOException, SAXException, MalformedURLException {
+	public LightweightProfileServer() throws IOException, SAXException, URISyntaxException {
 		this(System.getProperties());
 	}
 
@@ -79,8 +70,9 @@ final public class LightweightProfileServer implements ProfileHandler {
 	 * @throws SAXException If an error occurs parsing the profile file.
 	 * @throws MalformedURLException If the URL to the profile file is malformed.
 	 */
-	public LightweightProfileServer(Properties props) throws IOException, SAXException, MalformedURLException {
-		this(new URL(props.getProperty("org.apache.oodt.profile.handlers.LightweightProfileServer.profiles.url",
+	public LightweightProfileServer(Properties props)
+		throws IOException, SAXException, URISyntaxException {
+		this(new URI(props.getProperty("org.apache.oodt.profile.handlers.LightweightProfileServer.profiles.url",
                         props.getProperty("org.apache.oodt.profile.webServer.baseURL", "http://eda.jpl.nasa.gov")
                         + "/profiles.xml")),
 			props.getProperty("org.apache.oodt.profile.handlers.LightweightProfileServer.id", "lightweight"));
@@ -93,14 +85,13 @@ final public class LightweightProfileServer implements ProfileHandler {
 	 * @param id Identifier to report for when this handler is queried by name.
 	 * @throws IOException If an I/O error occurs.
 	 * @throws SAXException If an error occurs parsing the profile file.
-	 * @throws MalformedURLException If <var>url</var> is malformed.
 	 */
-	public LightweightProfileServer(URL url, String id) throws IOException, SAXException, MalformedURLException {
+	public LightweightProfileServer(URI url, String id) throws IOException, SAXException {
 		this.id = id;
 
 		// Get the list of profiles from the cache, if it's there.
-		profiles = (List) cache.get(url);
-		if (profiles != null) return;
+	  profiles = (List) cache.get(url);
+	  if (profiles != null) return;
 
 		// It wasn't in the cache, so create a parser to parse the file.  We only
 		// deal with correct files, so turn on validation and install an error
@@ -131,9 +122,9 @@ final public class LightweightProfileServer implements ProfileHandler {
 		doc.normalize();
 		Element root = doc.getDocumentElement();
 		profiles = Profile.createProfiles(root, new SearchableObjectFactory());
-		cache.put(url, profiles);
+	  cache.put(url, profiles);
 
-		System.err.println("LightweightProfileServer ready");
+	  System.err.println("LightweightProfileServer ready");
 	}
 
 	public List findProfiles(XMLQuery query) throws ProfileException {
